fix checkbox display on small screens

--- a/src/components/checkbox/checkbox.module.scss
+++ b/src/components/checkbox/checkbox.module.scss
@@ -2,6 +2,8 @@
 
 .checkbox_label {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
   gap: 3px;
   font-size: 14px;
 }
